fix grid gap and margin bottom conflict

--- a/styles/page.scss
+++ b/styles/page.scss
@@ -42,10 +42,12 @@
 
     .grid {
         display: flex;
-        gap: 2rem;
+        gap: 1rem;
         @media screen and (max-width: 500px) {
             flex-direction: column;
-            gap: 0px;
+            .col ul:last-child {
+                margin-bottom: 0px;
+            }
         }
         .col {
             flex: 1 1 0px;
@@ -81,8 +83,8 @@
     }
 
     br {
-        height: 2rem;
-        line-height: 2rem;
+        height: 1rem;
+        line-height: 1rem;
         display: block;
         content: ' ';
     }
@@ -90,9 +92,7 @@
     figure {
         aspect-ratio: 2 / 1;
         max-width: 800px;
-        max-height: calc(
-            100vh - var(--padding_polaroid) * 3 - var(--frame_description_h)
-        );
+        max-height: calc(100vh - var(--padding_polaroid) * 3 - var(--frame_description_h));
     }
     img {
         display: block;
