--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -25,9 +25,7 @@
     }
     :root {
         --timeline_nav_p: 1rem;
-        --nav_left_offset: calc(
-            50vw - var(--nav_frame_width) / 2 - var(--nav_timeline_gap)
-        );
+        --nav_left_offset: calc(50vw - var(--nav_frame_width) / 2 - var(--nav_timeline_gap));
         --nav_timeline_gap: 9rem;
     }
     .mobile {
@@ -62,10 +60,7 @@
     nav.open {
         pointer-events: auto;
         background-color: rgba(0, 0, 0, 0.7);
-        --nav_left_offset: calc(
-            50vw - var(--nav_frame_width) / 2 - var(--nav_timeline_gap) +
-                var(--scrollbar_width)
-        );
+        --nav_left_offset: calc(50vw - var(--nav_frame_width) / 2 - var(--nav_timeline_gap) + var(--scrollbar_width));
     }
 
     nav.open .column:not(.current) {
@@ -85,6 +80,9 @@
     }
 
     /* close */
+    nav:not(.open, .timeline) .polaroid:not(.mobile) .outer {
+        pointer-events: none;
+    }
     nav:not(.open, .timeline) .current .nested {
         margin-bottom: 0px !important;
     }
